syntax = "proto3";

package api.v1.storage;

import "api/v1/storage/storage.proto";
import "model/common.proto";

service Service {
  rpc CreateBucket(CreateBucketRequest) returns (CreateBucketResponse) {}
  rpc GetBucket(GetBucketRequest) returns (GetBucketResponse) {}
  rpc ListBuckets(ListBucketsRequest) returns (ListBucketsResponse) {}
  rpc DeleteBucket(DeleteBucketRequest) returns (DeleteBucketResponse) {}
  rpc UnlinkBucket(UnlinkBucketRequest) returns (UnlinkBucketResponse) {}

  rpc GetObject(GetObjectRequest) returns (GetObjectResponse) {}
  rpc ListObjects(ListObjectsRequest) returns (ListObjectsResponse) {}
  rpc DeleteObject(DeleteObjectRequest) returns (DeleteObjectResponse) {}
  rpc CopyObject(CopyObjectRequest) returns (CopyObjectResponse) {}

  rpc UploadObject(stream UploadObjectRequest) returns (UploadObjectResponse) {}
  rpc DownloadObject(DownloadObjectRequest)
      returns (stream DownloadObjectResponse) {}

  rpc CreateProvider(CreateProviderRequest) returns (CreateProviderResponse) {}
  rpc DeleteProvider(DeleteProviderRequest) returns (DeleteProviderResponse) {}
  rpc GetProvider(GetProviderRequest) returns (GetProviderResponse) {}
  rpc ListProviders(ListProvidersRequest) returns (ListProvidersResponse) {}
  rpc LookupProvider(LookupProviderRequest) returns (LookupProviderResponse) {}
}

message UnlinkBucketRequest {
  string bucket = 1;
}

message UnlinkBucketResponse {}

message LookupProviderRequest {
  string name = 1;
}

message LookupProviderResponse {
  string provider_id = 1;
  api.v1.storage.Provider provider = 2;
}

message CreateProviderRequest {
  string name = 1;
  api.v1.storage.Config config = 2;
  bool link_buckets = 3;
}

message CreateProviderResponse {
  api.v1.storage.Provider provider = 1;
}

message DeleteProviderRequest {
  string provider_id = 1;
}

message DeleteProviderResponse {}

message GetProviderRequest {
  string provider_id = 1;
}

message GetProviderResponse {
  api.v1.storage.Provider provider = 1;
}

message ListProvidersRequest {
  model.Pagination pagination = 1;
}

message ListProvidersResponse {
  repeated api.v1.storage.Provider providers = 1;
  uint64 total = 2;
}

message CreateBucketRequest {
  string bucket = 1;
  string provider_bucket = 2;
  string region = 3;
  string provider_id = 4;
}

message CreateBucketResponse {}

message GetBucketRequest {
  string bucket = 1;
}

message GetBucketResponse {
  api.v1.storage.Bucket bucket = 1;
}

message ListBucketsRequest {
  string token = 1;
}

message ListBucketsResponse {
  string token = 1;
  repeated api.v1.storage.Bucket buckets = 2;
}

message DeleteBucketRequest {
  string bucket = 1;
}

message DeleteBucketResponse {}

message GetObjectRequest {
  string bucket = 1;
  string path = 2;
}

message GetObjectResponse {
  api.v1.storage.Object object = 1;
}

message ListObjectsRequest {
  string token = 1;

  string bucket = 2;
  string prefix = 3;

  string start_path = 4;
  string end_path = 5;

  bool recursive = 6;
  uint32 limit = 7;
}

message ListObjectsResponse {
  message Result {
    oneof result {
      api.v1.storage.Object object = 1;
      string folder = 2;
    }
  }

  string token = 1;
  repeated Result results = 2;
}

message DeleteObjectRequest {
  string bucket = 1;
  string path = 2;
}

message DeleteObjectResponse {}

message CopyObjectRequest {
  string from_bucket = 1;
  string from_path = 2;
  string to_bucket = 3;
  string to_path = 4;
}

message CopyObjectResponse {}

message UploadObjectRequest {
  message Metadata {
    string bucket = 1;
    string path = 2;
    uint64 size = 3;
    bool only_replace = 4;
    bool only_create = 5;
    string content_type = 6;
  }

  oneof request {
    Metadata metadata = 1;
    bytes chunk = 2;
  }
}

message UploadObjectResponse {
  string path = 1;
  uint64 size = 2;
}

message DownloadObjectRequest {
  string bucket = 1;
  string path = 2;
}

message DownloadObjectResponse {
  bytes chunk = 1;
}
