syntax = "proto3";

package api.v1.storage.settings;

import "api/v1/storage/settings/storage.proto";

// The service to manage storage
service Service {
  rpc GetSettings(GetSettingsRequest) returns (GetSettingsResponse) {}
  rpc UpdateSettings(UpdateSettingsRequest) returns (UpdateSettingsResponse) {}
}

message GetSettingsRequest {}

message GetSettingsResponse {
  api.v1.storage.settings.Settings settings = 1;
}

message UpdateSettingsRequest {
}

message UpdateSettingsResponse {}
